      frontend, since debconf doesn't support the latter yet.
    - Don't handle user-setup preseeding for the debconf frontend.
    - Remove unused progress_position handling.
    - Fix exception names in ubi-network and ubi-tasks.
  * Require Python 2.5, so we can now use hashlib rather than md5 and avoid
    a slew of warnings.

 -- Evan Dandrea <evand@ubuntu.com>  Wed, 28 Oct 2009 10:57:17 +0000

ubiquity (2.0.7) karmic-updates; urgency=low

  * Fix incorrect arguments to get_cache_pkg (LP: #462462).

 -- Evan Dandrea <evand@ubuntu.com>  Wed, 28 Oct 2009 10:09:27 +0000

ubiquity (2.0.6) karmic; urgency=low

  * Automatic update of included source packages: partman-basicmethods
    43ubuntu2, partman-target 64ubuntu5.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 27 Oct 2009 15:20:11 +0000

ubiquity (2.0.5) karmic; urgency=low

  [ Evan Dandrea ]
  * Do not fail if linux-generic-pae is not in the package cache.
    Thanks Colin Watson (LP: #461377).
  * Really don't run oem-config again.  Thanks Colin Watson
    (LP: #461546).
  * Fix broken reference in the apport hook (LP: #461757).
  * Add noninteractive pages for user-setup and migrationassistant as
    well.
  * Automatic update of included source packages: user-setup
    1.27ubuntu11.

  [ Colin Watson ]
  * Run partman in the noninteractive frontend (otherwise we try to install
    to the live CD root!).
  * Explicitly print noninteractive output to the console (as the Python
    debconf module redirects sys.stdout to sys.stderr which ends up in
    /var/log/installer/debug).

 -- Evan Dandrea <evand@ubuntu.com>  Tue, 27 Oct 2009 13:21:40 +0000

ubiquity (2.0.4) karmic; urgency=low

  [ Evan Dandrea ]
  * Do not install the live CD kernel in the target system when using
    PAE (LP: #413135).
  * Properly set the kernel version in the main install process when
    using PAE so that symlinks get created for the kernel and initramfs.
  * Automatic update of included source packages: partman-base