@@ -1,3 +1,3 @@
-This is a pre-release of the Ubuntu live CD installer. It is not a final release; that will come with the final release of Ubuntu 9.10 in October 2009.
+This is a pre-release of the Ubuntu live CD installer. It is not a final release; that will come with the final release of Ubuntu 10.04 in April 2010.
 
 The installation process may resize or erase partitions on your hard disk. Be sure to <b>take a full backup of any valuable data</b> before running this program.
